--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -12,8 +12,9 @@
   margin: 20px 0px 100px 0px;
 }
 
+/* (40px) ini yang perlu diubah kalo header di halamn hotel kurang ke bawah */
 .headerContainer.listMode {
-  margin: 20px 0px 10px 0px;
+  margin: 20px 0px 40px 0px;
 }
 
 .headerList {
@@ -84,6 +85,7 @@
 .date {
   position: absolute;
   top: 50px;
+  z-index: 2;
 }
 
 .options {
@@ -94,6 +96,7 @@
   border-radius: 5px;
   -webkit-box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
   box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+  z-index: 2;
 }
 
 .optionItem {
